Fix of one unit test, FOSRestBundle dependency, and FOSUserBundle templates moved to HyperAdsBundle

--- a/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/index.html.twig
@@ -33,7 +33,7 @@
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ url('user_announcement_new') }}">{{ 'add.announcement'|babel }}</a>
+    <a href="{{ url('user_announcement_new') }}" class="btn pull-right">{{ 'add.announcement'|babel }}</a>
 </div>
 
 {% endblock %}
