--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
@@ -39,7 +39,7 @@
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ url('user_banner_new') }}">{{ 'add.banner'|babel }}</a>
+    <a href="{{ url('user_banner_new') }}" class="btn pull-right">{{ 'add.banner'|babel }}</a>
 </div>
 
 {% endblock %}
