--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
@@ -5,24 +5,14 @@
 {% block body %}
 <h1>{{ 'edit.advertiser'|babel({'advertiserName': entity.username}) }}</h1>
 
-<form action="{{ path('admin_advertiser_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+<form action="{{ path('admin_advertiser_update_handler', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
-    <p>
-        <button type="submit">{{ 'edit'|babel }}</button>
-    </p>
+    <div class="form-actions">
+        <a href="{{ path('admin_advertiser') }}" class="btn">{{ 'back.to.the.list'|babel }}</a>
+        <div class="pull-right">
+            <button type="submit" class="btn btn-danger" name="action" value="delete">{{ 'delete'|babel }}</button>
+            <button type="submit" class="btn btn-primary" name="action" value="update">{{ 'edit'|babel }}</button>
+        </div>
+    </div>
 </form>
-
-<ul class="record_actions">
-    <li>
-        <a href="{{ path('admin_advertiser') }}">
-            {{ 'back.to.the.list'|babel }}
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('admin_advertiser_delete', { 'id': entity.id }) }}" method="post">
-            {{ form_widget(delete_form) }}
-            <button type="submit">{{ 'delete'|babel }}</button>
-        </form>
-    </li>
-</ul>
 {% endblock %}
