--- a/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
@@ -22,7 +22,7 @@
         <td>{{ entity.name }}</td>
         <td>{{ entity.url }}</td>
         <td>
-            <ul>
+            <ul class="unstyled">
                 <li>
                     <a href="{{ path('admin_page_show', { 'id': entity.id }) }}">
                         {{ 'show'|babel }}
@@ -42,11 +42,7 @@
 {% else %}
 <div class="message">{{ 'no.entities'|babel }}</div>
 {% endif %}
-<ul>
-    <li>
-        <a href="{{ path('admin_page_new') }}">
-            {{ 'create.new.entry'|babel }}
-        </a>
-    </li>
-</ul>
+<div class="additional-links">
+    <a href="{{ path('admin_page_new') }}" class="btn pull-right">{{ 'create.new.entry'|babel }}</a>
+</div>
 {% endblock %}
