user-side layout finally done

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,14 +5,14 @@
         <title>{% block title %}Welcome!{% endblock %} - {{ page_title|babel }}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.css') }}" media="screen" />
-		<link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/hyperads/css/main.min.css') }}" media="screen" />
+        <link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
+        <link href='http://fonts.googleapis.com/css?family=Headland+One&subset=latin-ext' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="{{ asset('components/jquery/jquery.min.js') }}"></script>
-		<link rel="stylesheet" href="{{ asset('components/fancybox/source/jquery.fancybox.css') }}" type="text/css" media="screen" />
         <script type="text/javascript" src="{{ asset('components/fancybox/source/jquery.fancybox.pack.js') }}"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-
     {% include "::navbar.html.twig" %}
 
     <div class="container">
@@ -30,11 +30,20 @@
                 {% block body %}{% endblock %}
             </div>
         </div>
+    </div>
 
-        <hr/>
-        <footer>
-            &copy; <a href="http://hyperreal.info/">hyperreal.info</a> 2012-{{ 'now'|date('Y') }} <br/>
-            {{ 'powered.by.acid'|babel }} | <a href="https://github.com/hyperreal/AcidAdServer" class="github-fork">{{ 'fork.on.github'|babel }}</a>
-        {% block javascripts %}{% endblock %}
+    <hr />
+
+    <div id="footer">
+        <div class="container">
+            <p class="muted credit">
+                &copy; <a href="http://hyperreal.info/">hyperreal.info</a> 2012-{{ 'now'|date('Y') }} <br/>
+                {{ 'powered.by.acid'|babel }} | <a href="https://github.com/hyperreal/AcidAdServer" class="github-fork">{{ 'fork.on.github'|babel }}</a>
+            </p>
+        </div>
+    </div>
+
+    {% block javascripts %}{% endblock %}
+
     </body>
 </html>
