--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/add.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/add.html.twig
@@ -1,17 +1,21 @@
 {% extends "::base.html.twig" %}
+
 {% block title %}
     {{ 'banner.buy'|babel }}
 {% endblock %}
 {% block body %}
 <form action="{{ url('user_banner_create') }}" method="post" enctype="multipart/form-data">
-    {{ form_widget(form) }}
-    <input type="submit" value="{{ 'save'|babel }}"/>
+    <div class="controls with-file">
+        {{ form_widget(form) }}
+    </div>
+    <div class="form-actions">
+        <a class="btn" href="{{ url('user_banner_list') }}">{{ 'back.to.the.list'|babel }}</a>
+        <div class="pull-right">
+            <button type="submit" class="btn btn-primary">{{ 'save'|babel }}</button>
+        </div>
+    </div>
 </form>
-<ul>
-    <li>
-        <a href="{{ url('user_banner_list') }}">{{ 'back.to.the.list'|babel }}</a>
-    </li>
-</ul>
+
 {% endblock %}
 
 {% block javascripts %}
