--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
@@ -1,4 +1,5 @@
 {% extends "::base.html.twig" %}
+{% form_theme form 'HyperAdsBundle:UserBanner:payInZoneFormTheme.html.twig' %}
 
 {% block title %}
 {{ 'pay.for.banner.in.zone'|babel({'%banner%': banner.title, '%zone%': zone}) }}
@@ -8,19 +9,21 @@
 <h1>
     {{ 'pay.for.banner'|babel({'%banner%': banner.title}) }}
 </h1>
-<div class="info">
+<div class="alert alert-info">
     {{ 'pay.for.banner.in.zone.info'|babel({'%banner%': banner.title, '%zone%': zone}) }}
 </div>
 
-<form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post" id="payment-form" class="last">
+<form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post">
     {{ form_widget(form) }}
-    <div id="days-info" class="box hide span-5 left"></div>
-    <div class="buttons">
-        <input type="submit" class="title" value="{{ 'next'|babel }}"/>
+    <div class="form-actions">
+        <div id="days-info" class="pull-left"></div>
+        <div class="pull-right">
+            <input type="submit" class="btn btn-primary btn-large" value="{{ 'next'|babel }}"/>
+        </div>
     </div>
 </form>
 
-<ol class="small clear">
+<ol class="muted">
     <li>Odliczono dni, w których banner masz już wykupiony, oraz te, w których maksymalna liczba bannerów w strefie (5) jest już przekroczona;</li>
     <li>Jest to orientacyjna kwota, nie należy się nią ściśle sugerować;</li>
     <li>Są to dni, w których Twój banner nie będzie wyświetlany ze względu na przekroczoną liczbę dopuszczalnych bannerów w strefie (5). Zauważ, że cena jest również dopasowana do tej liczby - <strong>nie zapłacisz za dni, w czasie których Twój banner nie będzie widoczny</strong>.</li>
