some small visual changes

--- a/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Payments/canceledPayment.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <h1>{{ 'canceled.payment'|babel }}</h1>
-    <div class="info">
+    <div class="alert alert-info">
         {{ 'payment.was.canceled'|babel }}
     </div>
 {% endblock %}
