--- a/src/Hyper/AdsBundle/Resources/views/Payments/successfulPayment.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Payments/successfulPayment.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     <h1>{{ 'successful.payment'|babel }}</h1>
-    <div class="info">
+    <div class="alert alert-success">
         {{ 'transaction.was.queued'|babel }}
     </div>
 {% endblock %}
