--- a/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/zonesInfo.html.twig
@@ -7,7 +7,7 @@
 <h1>{{ 'zones.info'|babel }}</h1>
 
 {% if pages|length > 0 %}
-<div class="info">
+<div class="alert alert-info">
     {{ 'zones.short.info'|babel }}
 </div>
 
