--- a/src/Hyper/AdsBundle/Resources/views/Resetting/checkEmail.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Resetting/checkEmail.html.twig
@@ -1,7 +1,7 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
-<div class="info">
+<div class="alert alert-info">
 {{ 'resetting.check_email'|trans({'%email%': email}, 'FOSUserBundle') }}
 </div>
 {% endblock %}
