--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZoneSave.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZoneSave.html.twig
@@ -8,7 +8,7 @@
 <h1>
     {{ 'pay.for.banner'|babel({'%banner%': banner.title}) }}
 </h1>
-<div class="info">
+<div class="alert alert-info">
     {{ 'pay.for.banner.in.zone.info'|babel({'%banner%': banner.title, '%zone%': zone}) }}
 </div>
 
