--- a/src/Hyper/AdsBundle/Resources/views/Registration/register.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Registration/register.html.twig
@@ -1,5 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block title %}{{ 'register'|babel }}{% endblock %}
+
 {% block body %}
-{% include "FOSUserBundle:Registration:register_content.html.twig" %}
+    <h2>{{ 'register'|babel }}</h2>
+    {% include "FOSUserBundle:Registration:register_content.html.twig" %}
 {% endblock body %}
