--- a/src/Hyper/AdsBundle/Resources/views/Security/login.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Security/login.html.twig
@@ -14,6 +14,7 @@
     <input type="text" class="input-block-level" name="_username" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" value="{{ last_username }}" />
     <input type="password" class="input-block-level" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" />
 
-    <button type="submit" class="btn btn-large btn-primary" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
+    <a href="{{ path('fos_user_registration_register') }}" class="btn">{{ 'register'|babel }}</a>
+    <button type="submit" class="btn btn-large btn-primary pull-right" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
 </form>
 {% endblock body %}
