rules link in sidebar

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -32,5 +32,8 @@
     <li>
         <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
     </li>
+    <li>
+        <a href="{{ path('default_rules') }}">{{ 'rules'|babel }}</a>
+    </li>
     {% endif %}
 </ul>
