change and reset password ability

--- a/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -1,6 +1,6 @@
 <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password user-form">
     {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" />
+    <div class="form-actions">
+        <input type="submit" class="btn btn-primary pull-right" value="{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
 </form>
