--- a/src/Hyper/AdsBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Profile/edit_content.html.twig
@@ -1,6 +1,7 @@
 <form action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="user-form">
     {{ form_widget(form) }}
     <div class="form-actions">
+        <a href="{{ path('fos_user_change_password') }}" class="btn">{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}</a>
         <input type="submit" value="{{ 'profile.edit.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary pull-right" />
     </div>
 </form>
