--- a/src/Hyper/AdsBundle/Resources/views/Resetting/reset_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Resetting/reset_content.html.twig
@@ -1,6 +1,6 @@
 <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset user-form">
     {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
+    <div class="form-actions">
+        <input class="btn btn-primary" type="submit" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
 </form>
