--- a/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block title %}{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}{% endblock %}
+
 {% block body %}
-{% include "FOSUserBundle:ChangePassword:changePassword_content.html.twig" %}
+    <h2>{{ 'change_password.submit'|trans({}, 'FOSUserBundle') }}</h2>
+    {% include "FOSUserBundle:ChangePassword:changePassword_content.html.twig" %}
 {% endblock body %}
