--- a/src/Hyper/AdsBundle/Resources/views/Resetting/request_content.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Resetting/request_content.html.twig
@@ -8,7 +8,7 @@
         <label for="username">{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}</label>
         <input type="text" id="username" name="username" />
     </div>
-    <div>
-        <input type="submit" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
+    <div class="form-actions">
+        <input type="submit" class="btn btn-primary pull-right" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
     </div>
 </form>
