--- a/src/Hyper/AdsBundle/Resources/views/Resetting/reset.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Resetting/reset.html.twig
@@ -1,5 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block title %}{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}{% endblock %}
+
 {% block body %}
-{% include "FOSUserBundle:Resetting:reset_content.html.twig" %}
+    <h2>{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}</h2>
+    {% include "FOSUserBundle:Resetting:reset_content.html.twig" %}
 {% endblock body %}
