--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -29,7 +29,7 @@
     <li{% if app.request.get('_route') == 'default_zones_info' %} class="active"{% endif %}>
         <a href="{{ url("default_zones_info") }}">{{ 'zones.info'|babel }}</a>
     </li>
-    <li>
+    <li{% if app.request.get('_route') == 'default_rules' %} class="active"{% endif %}>
         <a href="http://www.seethestats.com/site/hyperreal.info/STSd1bIizV7" target="_blank" class="external">{{ 'analytics.stats'|babel }}</a>
     </li>
     <li>
