ability to disable announcement by user

--- a/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserAnnouncement/edit.html.twig
@@ -18,6 +18,11 @@
         {{ form_widget(form.announcementPaymentType) }}
         {{ form_errors(form.announcementPaymentType) }}
     </div>
+    <div class="clearfix">
+        {{ form_label(form.disabled) }}
+        {{ form_widget(form.disabled) }}
+        {{ form_errors(form.disabled) }}
+    </div>
     <div>
         {{ form_widget(form.description) }}
         {{ form_errors(form.description) }}
