move controllers to subpackages and skeleton of announcements admin

--- a/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Banner/payInZone.html.twig
@@ -1,5 +1,5 @@
 {% extends "::base.html.twig" %}
-{% form_theme form 'HyperAdsBundle:UserBanner:payInZoneFormTheme.html.twig' %}
+{% form_theme form 'HyperAdsBundle:User:Banner:payInZoneFormTheme.html.twig' %}
 
 {% block title %}
 {{ 'pay.for.banner.in.zone'|babel({'%banner%': banner.title, '%zone%': zone}) }}
