--- a/src/Hyper/AdsBundle/Resources/public/less/global.less
+++ b/src/Hyper/AdsBundle/Resources/public/less/global.less
@@ -1,74 +1,78 @@
 body {
-    padding: 60px 0 20px 0;
+  padding: 60px 0 20px 0;
 }
 
 ul.no-buttons {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 menu, ul.no-buttons {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 form {
-    label {
-        float: left;
-        width: 150px;
-        text-align: right;
-        padding: 7px 5px 0 0;
-    }
-    div.with-file > div > div:nth-child(2) {
-        margin-top: 8px;
-    }
+  label {
+    float: left;
+    width: 150px;
+    text-align: right;
+    padding: 7px 5px 0 0;
+  }
+  div.with-file > div > div:nth-child(2) {
+    margin-top: 8px;
+  }
 
 }
 
 .spanned-column {
-    background: #d5edf8;
+  background: #d5edf8;
 }
 
 form div > ul {
-    list-style: none;
-    float: right;
+  list-style: none;
+  float: right;
 }
 
 #tutorial {
-    p, ul {
-        font-family: 'Headland One', serif;
-    }
+  p, ul {
+    font-family: 'Headland One', serif;
+  }
 }
 
 .no-payment-possible {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #tutorial tbody tr:nth-child(2n) td, .cke_dialog_contents tbody tr:nth-child(2n) td {
-    background: #fff;
+  background: #fff;
 }
 
 table label.table {
-    float: none;
-    margin-left: 9px;
-    font-weight: normal;
-    padding: 0;
+  float: none;
+  margin-left: 9px;
+  font-weight: normal;
+  padding: 0;
 }
 
 .form-signin {
 
-    .form-signin-heading {
-        margin-bottom: 10px;
-    }
+  .form-signin-heading {
+    margin-bottom: 10px;
+  }
 
-    background-color: #e5e5e5;
-    border: 1px solid #e5e5e5;
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    margin: 0 auto 20px;
-    max-width: 318px;
-    padding: 19px 29px 29px;
+  background-color: #e5e5e5;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  margin: 0 auto 20px;
+  max-width: 318px;
+  padding: 19px 29px 29px;
 }
 
-
-
+#annoucement_full_type {
+  > div {
+    clear: both;
+    padding: 5px 0;
+  }
+}
