--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
         </div>
 
         <div class="span3">
-            <h2>{{ 'announcements'|babel }}</h2>
+            <h2>{{ 'announcement.plural'|babel }}</h2>
             <p>
                 W przygotowaniu
             </p>
