--- a/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/tutorial.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ 'tutorial'|babel }}
+{{ 'menu.guide'|babel }}
 {% endblock %}
 {% block body %}
 <script>
@@ -30,7 +30,7 @@
 		</ul>
 		<p>Więcej o BTC można dowiedzieć się z polskiej strony <a href="http://bitcoin.pl/obitcoin">http://bitcoin.pl/obitcoin</a>.</p>
 
-		<h3>Jak kupić bitcoiny (BTC)?</h3> 
+		<h3>Jak kupić bitcoiny (BTC)?</h3>
 
 		<p>Bitcoiny do zakupu reklam na hyperrealu można kupić na wiele sposobów. My sprawdziliśmy jeden z nich, jest on polecany na polskim forum bitcoin. Prosimy jednak zwrócić uwagę, że hyperreal w żaden sposób nie odpowiada za wasze transakcje zakupu bitcoinów!</p>
 
@@ -174,7 +174,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Aby to uczynić, Bitcurex prześle nam mailem specjalny jednorazowy specjalny odnośnik, pod którym będziemy w stanie wpisać adres do przelewu. Wpisujemy go podobnie jak na obrazku obok:</p>  
+		<p>Aby to uczynić, Bitcurex prześle nam mailem specjalny jednorazowy specjalny odnośnik, pod którym będziemy w stanie wpisać adres do przelewu. Wpisujemy go podobnie jak na obrazku obok:</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/bitxurex-edycja-danych-konta-do-wyplat-btc.png') }}" class="fancybox" title="">
@@ -198,7 +198,7 @@
 		</a>
 
 </td></tr><tr><td>
-		<p>Krótko (od minuty do kilkunastu minut) po przelaniu pieniędzy, po odświeżeniu przeglądarki (np. klawiszem F5), powinniśmy zobaczyć, że bitcoiny są w drodze:</p> 
+		<p>Krótko (od minuty do kilkunastu minut) po przelaniu pieniędzy, po odświeżeniu przeglądarki (np. klawiszem F5), powinniśmy zobaczyć, że bitcoiny są w drodze:</p>
 
 </td><td>
 		<a href="{{ asset('bundles/hyperads/images/mtgox-payment-received-waiting-for-validation.png') }}" class="fancybox" title="">
