--- a/src/Hyper/AdsBundle/Resources/views/Mailing/postPersistAnnouncement.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Mailing/postPersistAnnouncement.html.twig
@@ -5,6 +5,6 @@
     <a href="{{ url('admin_announcement_edit', {'announcement': announcement.id}) }}">{{ announcement.title }}</a>
 </p>
 
-<p>{{ 'announcement.was.added.or.edited'|babel({'%title%': announcement.title}) }}</p>
+<p>{{ 'announcement.modified'|babel({'%title%': announcement.title}) }}</p>
 <hr />
 <p>{{ announcement.description|raw }}</p>
