--- a/src/Hyper/AdsBundle/Resources/views/User/Announcement/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Announcement/index.html.twig
@@ -1,11 +1,11 @@
 {% extends "::base.html.twig" %}
 
 {% block title %}
-{{ 'your.announcements'|babel }}
+{{ 'announcement.plural.yours'|babel }}
 {% endblock %}
 
 {% block body %}
-<h1>{{ 'your.announcements'|babel }}</h1>
+<h1>{{ 'announcement.plural.yours'|babel }}</h1>
 
 {% if announcements|length > 0 %}
 <table class="table table-striped">
@@ -29,11 +29,11 @@
     </tbody>
 </table>
 {% else %}
-<div class="notice message">{{ 'empty.announcements.list'|babel }}</div>
+<div class="notice message">{{ 'announcements.list.empty'|babel }}</div>
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ url('user_announcement_new') }}" class="btn pull-right">{{ 'add.announcement'|babel }}</a>
+    <a href="{{ url('user_announcement_new') }}" class="btn pull-right">{{ 'announcement.add'|babel }}</a>
 </div>
 
 {% endblock %}
