--- a/src/Hyper/AdsBundle/Resources/views/User/Announcement/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/User/Announcement/show.html.twig
@@ -1,12 +1,12 @@
 {% extends "::base.html.twig" %}
 
 {% block title %}
-{{ 'edit.announcement'|babel({'%announcement%': announcement}) }}
+{{ 'announcement.edit'|babel({'%announcement%': announcement}) }}
 {% endblock %}
 
 {% block body %}
 
-<h1>{{ 'edit.announcement'|babel({'%announcement%': announcement}) }}</h1>
+<h1>{{ 'announcement.edit'|babel({'%announcement%': announcement}) }}</h1>
 <form method="POST" action="{{ url('user_announcement_update', {'announcement': announcement.id}) }}">
     <div>
         {{ form_label(form.title) }}
